💄 added login ui

--- a/ChallengeMobileApp/SupportingFiles/en.lproj/Localizable.strings
+++ b/ChallengeMobileApp/SupportingFiles/en.lproj/Localizable.strings
@@ -2,3 +2,10 @@
   Localizable.strings
   ChallengeMobileApp
 */
+
+// MARK: Login
+
+"email" = "Email";
+"password" = "Password";
+"forgotPassword" = "Forgot?";
+"login" = "Log in";
