🩹 refactor forgot password
- view
- navigation

--- a/ChallengeMobileApp/SupportingFiles/en.lproj/Localizable.strings
+++ b/ChallengeMobileApp/SupportingFiles/en.lproj/Localizable.strings
@@ -10,3 +10,5 @@
 "forgotPassword" = "Forgot?";
 "login" = "Log in";
 "today" = "Today";
+"enterEmailReset" = "Enter your email to receive instructions for resetting your password.";
+"reset" = "Reset";
