✨ implemented error handling in login and loading action in button

--- a/ChallengeMobileApp/SupportingFiles/en.lproj/Localizable.strings
+++ b/ChallengeMobileApp/SupportingFiles/en.lproj/Localizable.strings
@@ -15,3 +15,4 @@
 "logout" = "Logout";
 "version" = "v0.1.0 (1562903885)";
 "startSurvey" = "Start Survey";
+"errorLogin" = "Login error. Please check your credentials and try again.";
